--- a/index.html
+++ b/index.html
@@ -21,117 +21,175 @@
         <div class="wrapper">
             <h2>Primeiro, seu prato</h2>
             <div class="cards">
-                <div class="card">
+                <div class="card food" onclick="showGreen(this, 'food')">
                     <img src="assets/img/frango_yin_yang 1.png" alt="">
                     <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p>R$ 14,90</p>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card food" onclick="showGreen(this, 'food')">
                     <img src="assets/img/frango_yin_yang 1.png" alt="">
                     <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p>R$ 14,90</p>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card food" onclick="showGreen(this, 'food')">
                     <img src="assets/img/frango_yin_yang 1.png" alt="">
                     <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p>R$ 14,90</p>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card food" onclick="showGreen(this, 'food')">
                     <img src="assets/img/frango_yin_yang 1.png" alt="">
                     <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p>R$ 14,90</p>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card food" onclick="showGreen(this, 'food')">
                     <img src="assets/img/frango_yin_yang 1.png" alt="">
                     <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p>R$ 14,90</p>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
+                </div>
+                <div class="card food" onclick="showGreen(this, 'food')">
+                    <img src="assets/img/frango_yin_yang 1.png" alt="">
+                    <h3>Frango Yin Yang</h3>
+                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <div>
+                        <p>R$ 18,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
 
             </div>
+
         </div>
 
         <div class="wrapper">
             <h2>Agora, sua bebida</h2>
             <div class="cards">
-                <div class="card">
+                <div class="card drink" onclick="showGreen(this, 'drink')">
                     <img src="assets/img/coquinha_gelada 1.png" alt="">
                     <h3>Coquinha gelada</h3>
-                    <h4>Lata 350ml</h4>
-                    <p>R$ 4,90</p>
+                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <div>
+                        <p>R$ 4,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card drink" onclick="showGreen(this, 'drink')">
                     <img src="assets/img/coquinha_gelada 1.png" alt="">
                     <h3>Coquinha gelada</h3>
-                    <h4>Lata 350ml</h4>
-                    <p>R$ 4,90</p>
+                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <div>
+                        <p>R$ 4,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card drink" onclick="showGreen(this, 'drink')">
                     <img src="assets/img/coquinha_gelada 1.png" alt="">
                     <h3>Coquinha gelada</h3>
-                    <h4>Lata 350ml</h4>
-                    <p>R$ 4,90</p>
+                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <div>
+                        <p>R$ 4,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card drink" onclick="showGreen(this, 'drink')">
                     <img src="assets/img/coquinha_gelada 1.png" alt="">
                     <h3>Coquinha gelada</h3>
-                    <h4>Lata 350ml</h4>
-                    <p>R$ 4,90</p>
+                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <div>
+                        <p>R$ 4,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card drink" onclick="showGreen(this, 'drink')">
                     <img src="assets/img/coquinha_gelada 1.png" alt="">
                     <h3>Coquinha gelada</h3>
-                    <h4>Lata 350ml</h4>
-                    <p>R$ 4,90</p>
+                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <div>
+                        <p>R$ 4,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
+                
             </div>
+            
         </div>
 
         <div class="wrapper">
             <h2>Por fim, sua sobremesa</h2>
             <div class="cards">
-                <div class="card">
+                <div class="card dessert" onclick="showGreen(this, 'dessert')">
                     <img src="assets/img/pudim 1.png" alt="">
                     <h3>Pudim</h3>
-                    <h4>Apenas pudim</h4>
-                    <p>R$ 7,90</p>
+                    <h4>Apenas pudim, apenas pudim</h4>
+                    <div>
+                        <p>R$ 7,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card dessert" onclick="showGreen(this, 'dessert')">
                     <img src="assets/img/pudim 1.png" alt="">
                     <h3>Pudim</h3>
-                    <h4>Apenas pudim</h4>
-                    <p>R$ 7,90</p>
+                    <h4>Apenas pudim, apenas pudim</h4>
+                    <div>
+                        <p>R$ 7,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card dessert" onclick="showGreen(this, 'dessert')">
                     <img src="assets/img/pudim 1.png" alt="">
                     <h3>Pudim</h3>
-                    <h4>Apenas pudim</h4>
-                    <p>R$ 7,90</p>
+                    <h4>Apenas pudim, apenas pudim</h4>
+                    <div>
+                        <p>R$ 7,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card dessert" onclick="showGreen(this, 'dessert')">
                     <img src="assets/img/pudim 1.png" alt="">
                     <h3>Pudim</h3>
-                    <h4>Apenas pudim</h4>
-                    <p>R$ 7,90</p>
+                    <h4>Apenas pudim, apenas pudim</h4>
+                    <div>
+                        <p>R$ 7,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card dessert" onclick="showGreen(this, 'dessert')">
                     <img src="assets/img/pudim 1.png" alt="">
                     <h3>Pudim</h3>
-                    <h4>Apenas pudim</h4>
-                    <p>R$ 7,90</p>
+                    <h4>Apenas pudim, apenas pudim</h4>
+                    <div>
+                        <p>R$ 7,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
                 </div>
 
             </div>
+
         </div>
 
     </section>
 
     <footer>
-        <button disabled="disabled"><p>Selecione os 3 itens <br>
+        <button class="off "><p class="buttomText">Selecione os 3 itens <br>
             para fechar o pedido</p></button>
     </footer>
 
