Corrections of HTML

--- a/index.html
+++ b/index.html
@@ -22,59 +22,51 @@
             <h2>Primeiro, seu prato</h2>
             <div class="cards">
                 <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <img src="assets/img/strogonofffrango.png" alt="">
+                    <h3>Strogonoff </h3>
+                    <h4>de frango com arroz e batata palha</h4>
                     <div>
-                        <p>R$ 18,90</p>
+                        <p class="price">R$ 16,00</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <img src="assets/img/filemignonfritas.jpg" alt="">
+                    <h3>Filé Mignon</h3>
+                    <h4>Muito filé, junto com fritas</h4>
                     <div>
-                        <p>R$ 18,90</p>
+                        <p class="price">R$ 28,00</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <img src="assets/img/nhoque.jpg" alt="">
+                    <h3>Nhoque</h3>
+                    <h4>Comida quentinha deliciosa</h4>
                     <div>
-                        <p>R$ 18,90</p>
+                        <p class="price">R$ 20,50</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <img src="assets/img/rattatouile.jpg" alt="">
+                    <h3>Ratatouille</h3>
+                    <h4>Pra você saborear legumes</h4>
                     <div>
-                        <p>R$ 18,90</p>
+                        <p class="price">R$ 32,90</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
+                    <img src="assets/img/massaallaputtanesca.jpg" alt="">
+                    <h3>Espaguete </h3>
+                    <h4>Uma massa deliciosa alla puttanesca</h4>
                     <div>
-                        <p>R$ 18,90</p>
+                        <p class="pricest">R$ 30,90</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
-                <div class="card food" onclick="showGreen(this, 'food')">
-                    <img src="assets/img/frango_yin_yang 1.png" alt="">
-                    <h3>Frango Yin Yang</h3>
-                    <h4>Um pouco de frango, um pouco de frango</h4>
-                    <div>
-                        <p>R$ 18,90</p>
-                        <img src="assets/img/checkmark-circle 1.png" alt="">
-                    </div>
-                </div>
+                
 
             </div>
 
@@ -84,11 +76,38 @@
             <h2>Agora, sua bebida</h2>
             <div class="cards">
                 <div class="card drink" onclick="showGreen(this, 'drink')">
-                    <img src="assets/img/coquinha_gelada 1.png" alt="">
-                    <h3>Coquinha gelada</h3>
-                    <h4>Apenas coquinha, apenas coquinha</h4>
+                    <img src="assets/img/sucodelaranja.jpg" alt="">
+                    <h3>Suquinho de laranja</h3>
+                    <h4>Apenas a melhor bebida do mundo</h4>
                     <div>
-                        <p>R$ 4,90</p>
+                        <p class="price">R$ 8,90</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
+                </div>
+                <div class="card drink" onclick="showGreen(this, 'drink')">
+                    <img src="assets/img/vinho.jpg" alt="">
+                    <h3>Taça de vinho</h3>
+                    <h4>Para tomar com o seu amor</h4>
+                    <div>
+                        <p class="price">R$ 14,00</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
+                </div>
+                <div class="card drink" onclick="showGreen(this, 'drink')">
+                    <img src="assets/img/dolly.jpg" alt="">
+                    <h3>Dolly</h3>
+                    <h4>Dolly, dolly, dolly, dolly, doooolly</h4>
+                    <div>
+                        <p class="price">R$ 2,50</p>
+                        <img src="assets/img/checkmark-circle 1.png" alt="">
+                    </div>
+                </div>
+                <div class="card drink" onclick="showGreen(this, 'drink')">
+                    <img src="assets/img/cerveja.png" alt="">
+                    <h3>Cerveja gelada</h3>
+                    <h4>Cervejinha trincando para matar a sede</h4>
+                    <div>
+                        <p class="price">R$ 3,20</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
@@ -97,34 +116,7 @@
                     <h3>Coquinha gelada</h3>
                     <h4>Apenas coquinha, apenas coquinha</h4>
                     <div>
-                        <p>R$ 4,90</p>
-                        <img src="assets/img/checkmark-circle 1.png" alt="">
-                    </div>
-                </div>
-                <div class="card drink" onclick="showGreen(this, 'drink')">
-                    <img src="assets/img/coquinha_gelada 1.png" alt="">
-                    <h3>Coquinha gelada</h3>
-                    <h4>Apenas coquinha, apenas coquinha</h4>
-                    <div>
-                        <p>R$ 4,90</p>
-                        <img src="assets/img/checkmark-circle 1.png" alt="">
-                    </div>
-                </div>
-                <div class="card drink" onclick="showGreen(this, 'drink')">
-                    <img src="assets/img/coquinha_gelada 1.png" alt="">
-                    <h3>Coquinha gelada</h3>
-                    <h4>Apenas coquinha, apenas coquinha</h4>
-                    <div>
-                        <p>R$ 4,90</p>
-                        <img src="assets/img/checkmark-circle 1.png" alt="">
-                    </div>
-                </div>
-                <div class="card drink" onclick="showGreen(this, 'drink')">
-                    <img src="assets/img/coquinha_gelada 1.png" alt="">
-                    <h3>Coquinha gelada</h3>
-                    <h4>Apenas coquinha, apenas coquinha</h4>
-                    <div>
-                        <p>R$ 4,90</p>
+                        <p class="price">R$ 4,90</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
@@ -137,50 +129,51 @@
             <h2>Por fim, sua sobremesa</h2>
             <div class="cards">
                 <div class="card dessert" onclick="showGreen(this, 'dessert')">
-                    <img src="assets/img/pudim 1.png" alt="">
-                    <h3>Pudim</h3>
-                    <h4>Apenas pudim, apenas pudim</h4>
+                    <img src="assets/img/brigadeirao.png" alt="">
+                    <h3>Brigadeirão</h3>
+                    <h4>Simplesmente pudim de chocolate</h4>
                     <div>
-                        <p>R$ 7,90</p>
+                        <p class="price">R$ 16,00</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card dessert" onclick="showGreen(this, 'dessert')">
-                    <img src="assets/img/pudim 1.png" alt="">
-                    <h3>Pudim</h3>
-                    <h4>Apenas pudim, apenas pudim</h4>
+                    <img src="assets/img/torta.png" alt="">
+                    <h3>Torta de limão</h3>
+                    <h4>Tortinha de limão gelada</h4>
                     <div>
-                        <p>R$ 7,90</p>
+                        <p class="price">R$ 12,50</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card dessert" onclick="showGreen(this, 'dessert')">
-                    <img src="assets/img/pudim 1.png" alt="">
-                    <h3>Pudim</h3>
-                    <h4>Apenas pudim, apenas pudim</h4>
+                    <img src="assets/img/mousse.jpg" alt="">
+                    <h3>Mousse</h3>
+                    <h4>Melhor doce existente já criado</h4>
                     <div>
-                        <p>R$ 7,90</p>
+                        <p class="price">R$ 11,00</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card dessert" onclick="showGreen(this, 'dessert')">
-                    <img src="assets/img/pudim 1.png" alt="">
-                    <h3>Pudim</h3>
-                    <h4>Apenas pudim, apenas pudim</h4>
+                    <img src="assets/img/brownie.jpg" alt="">
+                    <h3>Brownie</h3>
+                    <h4>Brownie quentinho de chocolate</h4>
                     <div>
-                        <p>R$ 7,90</p>
+                        <p class="price">R$ 9,50</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
                 <div class="card dessert" onclick="showGreen(this, 'dessert')">
-                    <img src="assets/img/pudim 1.png" alt="">
-                    <h3>Pudim</h3>
-                    <h4>Apenas pudim, apenas pudim</h4>
+                    <img src="assets/img/banoffe.png" alt="">
+                    <h3>Banoffe</h3>
+                    <h4>Sobremesa chic para o glamour</h4>
                     <div>
-                        <p>R$ 7,90</p>
+                        <p class="price">R$ 16,90</p>
                         <img src="assets/img/checkmark-circle 1.png" alt="">
                     </div>
                 </div>
+                
 
             </div>
 
@@ -189,10 +182,9 @@
     </section>
 
     <footer>
-        <button class="off "><p class="buttomText">Selecione os 3 itens <br>
+        <button disabled class="off " onclick="order()"><p class="buttomText">Selecione os 3 itens <br>
             para fechar o pedido</p></button>
     </footer>
-
 
     <script src="assets/js/main.js"></script>
 </body>
