small changes to support the bonus checklist

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <p class="desval">valor</p>
                 </div>
                 <div>
-                    <h5>TOTAL</h5>
+                    <h5 class="totnam">TOTAL</h5>
                     <p  class="totval">valor</p>
                 </div>
 
